# ankh_feistel

./: .gitignore  README.md  pyproject.toml
ankh/: __init__.py
tests/: test_cbc_mode.py  test_cfb_mode.py  test_ctr_mode.py  test_ecb_mode.py  test_encryption_decryption.py  test_ofb_mode.py  test_pcbc_mode.py  test_utilities.py
