[tool.poetry]
name = "ankh"
version = "0.1.0"
description = "A block cipher using a HMAC feistel network"
authors = ["Osiriz <0siriz@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycryptodome = "^3.20.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
