[project]
name = "ankh"
version = "0.2.0"
description = "A block cipher using a HMAC feistel network"
authors = [{ name = "Osiriz", email = "0siriz@proton.me" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "numpy>=2.2.4",
    "pycryptodome>=3.22.0",
]

[dependency-groups]
test = [
]
dev = [
    "ipython>=8.34.0",
    "pytest>=8.3.5",
    "pytest-repeat>=0.9.3",
    "pytest-xdist>=3.6.1",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
